# Second-hand-book

./: CMakeLists.txt  ChatDetailPage.qml  Home.qml  HomePage.qml  LoginOn.qml  Main.qml  MessagesPage.qml  README.md  main.cpp
resources/: images.qrc
